# depression-pred-sensor-291-UCSD

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/eval/: base_evaluator.py
src/models/: baseline_models.py
src/notebooks/: baseline_linear_models.ipynb  final_model_notebook.py  sensor_time_series_model.py
src/utils/: base_dataloaders.py  dataloaders.py  merged_dataloaders.py
test/: test_base_dataloader.py  test_baseline_models.py  test_dataloader.py  test_merged_dataloader.py
