[project]
name = "depression-pred-sensor-291-ucsd"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=7.1.0",
    "marimo>=0.18.3",
    "matplotlib>=3.10.7",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "pip>=25.3",
    "plotly>=6.5.0",
    "pytest>=9.0.1",
    "scikit-learn>=1.7.2",
    "torch>=2.9.1",
    "umap-learn>=0.5.9.post2",
]
